--- a/scaffold/template.html
+++ b/scaffold/template.html
@@ -1,4 +1,4 @@
-<p>Hi {{firstName}},</p>
+<p>Hi {{name}},</p>
 <p>I noticed {{company}} is working on [relevant topic].</p>
 <p>Quick question: would you be open to a 15-minute intro call?</p>
 <p>Best,<br />Alice</p>
