Updated the scaffold snapshot so tests reflect the new template copy (remove CTA, switch to Jeremy)

--- a/scaffold/template.html
+++ b/scaffold/template.html
@@ -1,4 +1,12 @@
 <p>Hi {{name}},</p>
-<p>I noticed {{company}} is working on [relevant topic].</p>
-<p>Quick question: would you be open to a 15-minute intro call?</p>
-<p>Best,<br />Alice</p>
+
+<p>
+  I came across {{company}} and thought this might save your team some time.
+</p>
+
+<p>
+  We’ve built a simple way to manage outreach at scale without losing the
+  personal touch.
+</p>
+
+<p>Best,<br />Jeremy</p>
